@@ -1,5 +1,14 @@
 2015-11-30  Ola Jeppsson  <ola@adapteva.com>
 
+	* multicore/domino-dma.c (next_hop): Add case for when groupid=0 and
+	number of rows is 1.
+	(print_route): Eliminate possibility for uninitialized value in path.
+	* multicore/domino.c (next_hop): Add case for when groupid=0 and
+	number of rows is 1.
+	(print_route): Eliminate possibility for uninitialized value in path.
+
+2015-11-30  Ola Jeppsson  <ola@adapteva.com>
+
 	* multicore/multicore.exp (ldflags): Define section start of
 	workgroup_cfg and ext_mem_cfg.
 	* multicore/e-lib-inl.h (barrier): Add compiler barrier macro.
